--- a/app/src/main/res/layout/view1.xml
+++ b/app/src/main/res/layout/view1.xml
@@ -5,20 +5,32 @@
     android:background="@drawable/v1"
     android:orientation="vertical"
     >
-    <Button
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="TL"
-        android:text="真懶"/>
-    <Button
-        android:id="@+id/b1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:onClick="FL"
-        android:text="假懶"
-        />
+        android:layout_height="wrap_content">
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="TL"
+            android:text="真懶"/>
+        <Button
+            android:id="@+id/b1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:onClick="FL"
+            android:text="假懶"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="test"
+            />
+
+    </LinearLayout>
     <WebView
         android:id="@+id/wv"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 
