--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -2,20 +2,35 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/TVname"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:text="第一行文字"
+            android:textColor="#00FF00"
+            android:textSize="20dp" />
+
     <TextView
-        android:id="@+id/title"
-        android:layout_width="match_parent"
+        android:id="@+id/TVtag"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="10dp"
+        android:text="第二行文字"
+        android:textColor="#00FF00"
+        android:textSize="16dp"
+        android:layout_below="@+id/TVname"
         />
     <TextView
-        android:id="@+id/addr"
-        android:layout_width="match_parent"
+        android:id="@+id/TVaddr"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/title"
-
+        android:layout_marginLeft="10dp"
+        android:text="第二行文字"
+        android:textColor="#00FF00"
+        android:textSize="16dp"
+        android:layout_below="@+id/TVtag"
         />
-
 </RelativeLayout>
